<resources>
    <string name="app_name">SpeedNet</string>
    <string name="main_page">Main page</string>
    <string name="history">History</string>
    <string name="other_info">Other info</string>

    <string name="type">\n Type </string>
    <string name="date">\n Date </string>
    <string name="download_speed"> Download \n speed</string>
    <string name="upload_speed"> Upload \n speed</string>
    <string name="ping">\n Ping </string>

    <string name="type_info">Type Info</string>
    <string name="date_info">Date Info</string>
    <string name="download_speed_info">Download speed Info</string>
    <string name="upload_speed_info">Upload speed Info</string>
    <string name="ping_info">Ping Info</string>

    <string name="button_start">START</string>

    <string name="basic_left">25 Mbps</string>
    <string name="basic_right">Basic Internet speed</string>
    <string name="average_left">100 Mbps</string>
    <string name="average_right">Average Internet speed</string>
    <string name="fast_left">200 Mbps</string>
    <string name="fast_right">Fast Internet speed</string>

    <string name="net_part">What does SpeedNet do?</string>
    <string name="download_part">What is Download speed?</string>
    <string name="upload_part">What is Upload speed?</string>
    <string name="ping_part">What is Ping?</string>

    <string name="net_part_text">The SpeedNet measures your current internet speed to the server closest to you. First and foremost, it checks if you are connected to the Internet at all. Then it points out your type of connection, WiFi or mobile/cellular, etc.</string>
    <string name="download_part_text">Download speed is the speed with which you receive data from the internet. </string>
    <string name="upload_part_text">Upload speed is the speed with which you send data to the internet. It is important to know for those who regularly use cloud services to store files.</string>
    <string name="ping_part_text">Ping is response time between your computer and the internet. Pings refer to the response delay, which is particularly interesting to gamers. Here, lower values are preferable. 
</string>



</resources>