<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:paddingTop="36dp"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/type"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/date"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/download_speed"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/download_speed"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upload_speed"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/upload_speed"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ping"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/ping"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/speed_net_info_item" />

</LinearLayout>