<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/type_info"
                android:layout_width="68dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_settings_24"/>

            <TextView
                android:id="@+id/date_info"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                tools:text="@string/date_info" />

            <TextView
                android:id="@+id/download_speed_info"
                android:layout_width="76dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                tools:text="@string/download_speed_info" />

            <TextView
                android:id="@+id/upload_speed_info"
                android:layout_width="76dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                tools:text="@string/upload_speed_info" />

            <TextView
                android:id="@+id/ping_info"
                android:layout_width="72dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                tools:text="@string/ping_info" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/black" />

    </LinearLayout>

</layout>